--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 MONGODB_URI=mongodb+srv://vinayalavalaanp:vinay123@cluster0.jzjkh.mongodb.net/mern
 PORT=5001
-JWT_SECRET=myScret
+JWT_SECRET=128734
 
 CLOUDINARY_CLOUD_NAME=dd45vvsku
 CLOUDINARY_API_KEY=311826162886857
